--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -1,9 +1,24 @@
-zxing_add_package(GTest googletest https://github.com/google/googletest.git v1.14.0)
+#zxing_add_package(GTest googletest https://github.com/google/googletest.git v1.14.0)
 
-if (GTest_POPULATED)
-    # don't install gtest stuff on "make install"
-    set (INSTALL_GTEST OFF CACHE BOOL "" FORCE)
-endif()
+set(GTEST_LOCATION /home/sergv/Documents/googletest)
+add_library(GTest::gtest STATIC IMPORTED)
+set_property(TARGET GTest::gtest PROPERTY IMPORTED_LOCATION "${GTEST_LOCATION}/lib/libgtest.a")
+set_property(TARGET GTest::gtest PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${GTEST_LOCATION}/include")
+target_link_libraries(GTest::gtest INTERFACE pthread)
+add_library(GTest::gtest_main STATIC IMPORTED)
+set_property(TARGET GTest::gtest_main PROPERTY IMPORTED_LOCATION "${GTEST_LOCATION}/lib/libgtest_main.a")
+set_property(TARGET GTest::gtest_main PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${GTEST_LOCATION}/include")
+add_library(GTest::gmock STATIC IMPORTED)
+set_property(TARGET GTest::gmock PROPERTY IMPORTED_LOCATION "${GTEST_LOCATION}/lib/libgmock.a")
+set_property(TARGET GTest::gmock PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${GTEST_LOCATION}/include")
+add_library(GTest::gmock_main STATIC IMPORTED)
+set_property(TARGET GTest::gmock_main PROPERTY IMPORTED_LOCATION "${GTEST_LOCATION}/lib/libgmock_main.a")
+set_property(TARGET GTest::gmock_main PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${GTEST_LOCATION}/include")
+
+#if (GTest_POPULATED)
+#    # don't install gtest stuff on "make install"
+#    set (INSTALL_GTEST OFF CACHE BOOL "" FORCE)
+#endif()
 
 if (MSVC)
     # default to UTF-8
@@ -30,19 +45,19 @@ target_sources (UnitTest PRIVATE
     PatternTest.cpp
     TextDecoderTest.cpp
     ThresholdBinarizerTest.cpp
-    aztec/AZDecoderTest.cpp
-    aztec/AZDetectorTest.cpp
-    datamatrix/DMDecodedBitStreamParserTest.cpp
-    maxicode/MCDecoderTest.cpp
-    oned/ODCode128ReaderTest.cpp
-    oned/ODCode39ExtendedModeTest.cpp
-    oned/ODCode39ReaderTest.cpp
-    oned/ODCode93ReaderTest.cpp
-    oned/ODDataBarExpandedBitDecoderTest.cpp
-    oned/ODDataBarReaderTest.cpp
-    pdf417/PDF417DecoderTest.cpp
-    pdf417/PDF417ErrorCorrectionTest.cpp
-    pdf417/PDF417ScanningDecoderTest.cpp
+#    aztec/AZDecoderTest.cpp
+#    aztec/AZDetectorTest.cpp
+#    datamatrix/DMDecodedBitStreamParserTest.cpp
+#    maxicode/MCDecoderTest.cpp
+#    oned/ODCode128ReaderTest.cpp
+#    oned/ODCode39ExtendedModeTest.cpp
+#    oned/ODCode39ReaderTest.cpp
+#    oned/ODCode93ReaderTest.cpp
+#    oned/ODDataBarExpandedBitDecoderTest.cpp
+#    oned/ODDataBarReaderTest.cpp
+#    pdf417/PDF417DecoderTest.cpp
+#    pdf417/PDF417ErrorCorrectionTest.cpp
+#    pdf417/PDF417ScanningDecoderTest.cpp
     qrcode/MQRDecoderTest.cpp
     qrcode/QRBitMatrixParserTest.cpp
     qrcode/QRDataMaskTest.cpp
@@ -57,20 +72,20 @@ endif()
 
 if (ZXING_WRITERS MATCHES "ON|OLD|BOTH")
 target_sources (UnitTest PRIVATE
-    aztec/AZEncoderTest.cpp
-    datamatrix/DMHighLevelEncodeTest.cpp
-    datamatrix/DMPlacementTest.cpp
-    datamatrix/DMSymbolInfoTest.cpp
-    datamatrix/DMWriterTest.cpp
-    oned/ODCode39WriterTest.cpp
-    oned/ODCode93WriterTest.cpp
-    oned/ODEAN13WriterTest.cpp
-    oned/ODEAN8WriterTest.cpp
-    oned/ODITFWriterTest.cpp
-    oned/ODUPCAWriterTest.cpp
-    oned/ODUPCEWriterTest.cpp
-    pdf417/PDF417HighLevelEncoderTest.cpp
-    pdf417/PDF417WriterTest.cpp
+#    aztec/AZEncoderTest.cpp
+#    datamatrix/DMHighLevelEncodeTest.cpp
+#    datamatrix/DMPlacementTest.cpp
+#    datamatrix/DMSymbolInfoTest.cpp
+#    datamatrix/DMWriterTest.cpp
+#    oned/ODCode39WriterTest.cpp
+#    oned/ODCode93WriterTest.cpp
+#    oned/ODEAN13WriterTest.cpp
+#    oned/ODEAN8WriterTest.cpp
+#    oned/ODITFWriterTest.cpp
+#    oned/ODUPCAWriterTest.cpp
+#    oned/ODUPCEWriterTest.cpp
+#    pdf417/PDF417HighLevelEncoderTest.cpp
+#    pdf417/PDF417WriterTest.cpp
     qrcode/QRWriterTest.cpp
 )
 endif()
@@ -80,18 +95,19 @@ target_sources (UnitTest PRIVATE
     ContentTest.cpp
     ReedSolomonTest.cpp
     TextEncoderTest.cpp
-    aztec/AZEncodeDecodeTest.cpp
-    aztec/AZHighLevelEncoderTest.cpp
+#    aztec/AZEncodeDecodeTest.cpp
+#    aztec/AZHighLevelEncoderTest.cpp
     datamatrix/DMEncodeDecodeTest.cpp
-    oned/ODCodaBarWriterTest.cpp
-    oned/ODCode128WriterTest.cpp
+#    oned/ODCodaBarWriterTest.cpp
+#    oned/ODCode128WriterTest.cpp
     qrcode/QREncoderTest.cpp
 )
 endif()
 
 target_include_directories (UnitTest PRIVATE .)
 
-target_link_libraries (UnitTest ZXing::ZXing GTest::gtest_main GTest::gmock)
+target_link_libraries (UnitTest ZXing::ZXing GTest::gtest_main GTest::gmock pthread)
+target_compile_definitions(UnitTest PUBLIC -DGTEST_LANG_CXX11=0 -D_SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING)
 
 #target_precompile_headers(UnitTest PRIVATE ${CMAKE_SOURCE_DIR}/core/src/ReadBarcode.h)
 
